--- a/emacs.org
+++ b/emacs.org
@@ -217,7 +217,7 @@ These are non-interactive library functions useful in other parts of this config
 
 (setq jw--run-cmd-shell "bash")
 
-(defun jw--run-cmd (command &optional process-name before-process-creation after-process-creation after-process-finish delete-tmp-script-after)
+(cl-defun jw--run-cmd (command &key process-name before-process-creation after-process-creation after-process-finish delete-tmp-script-after)
   "A wrapper around `make-comint-in-buffer'.
 
 For commands that have already finished, this will clean up the process buffer and re-run the command.
@@ -1200,10 +1200,10 @@ If the server is connected and a prefix arg is provided, then invoke a quick /ms
 
 (defun jw-todo-backup ()
   (interactive)
-  (jw--run-cmd "todo-backup" nil nil nil
-               (lambda (proc) ;; after-process-finish
-                 (kill-buffer (process-buffer proc))
-                 (message "Command jw-todo-backup finished"))))
+  (jw--run-cmd "todo-backup"
+               :after-process-finish (lambda (proc)
+                                       (kill-buffer (process-buffer proc))
+                                       (message "Command jw-todo-backup finished"))))
 
 (setq jw-org-agenda-pre-hook nil)
 
