cleanup linum-mode font

--- a/emacs.org
+++ b/emacs.org
@@ -318,6 +318,8 @@ For long running processes, this will always toggle back and forth between the p
 
 (setq frame-title-format nil)
 
+(add-hook 'linum-before-numbering-hook (lambda () (set-face-attribute 'linum nil :foreground "#5683a2" :background "black")))
+
 (when (eq system-type 'darwin)
   (add-to-list 'default-frame-alist '(ns-transparent-titlebar . t))
   (add-to-list 'default-frame-alist '(ns-appearance . dark))
@@ -724,8 +726,8 @@ With C-u C-u, then kill the comment on the current line."
     (unless was-at-end-of-line (open-line-previous))))
 
 (defun transparency-set (value)
-  (interactive "n0 - 100 (default 75): ")
-  (jw--set-transparency value))
+  (interactive (list (read-string "0 - 100: " "75")))
+  (jw--set-transparency (string-to-number value)))
 
 (defun transparency-on ()
   (interactive)
