--- a/emacs.org
+++ b/emacs.org
@@ -425,8 +425,9 @@ fix for cursor color in clients falling back to the default theme [[http:emacs.s
 
 (setq tramp-default-method "ssh")
 
-;; comint doesn't recognize a password prompt in one of my scripts. consider reporting this as a bug.
-(setq comint-password-prompt-regexp (concat comint-password-prompt-regexp "\\|^.*Password:\\s *\\'"))
+;; bug: ccrypt prompt for encryption key does not match password input regexp
+;; crypt prompts to match: "Enter encryption key:" and "Enter encryption key: (repeat)"
+(setq comint-password-prompt-regexp (concat comint-password-prompt-regexp "\\|^Enter encryption key:.*\\s *\\'"))
 
 (defun save-buffers-kill-terminal--advice--ask-yes-or-no (original-function &rest args)
   (if (yes-or-no-p "Is life too much? ") (apply original-function args) (message "Keep up the good fight!")))
