--- a/emacs.org
+++ b/emacs.org
@@ -426,8 +426,8 @@ fix for cursor color in clients falling back to the default theme [[http:emacs.s
 (setq tramp-default-method "ssh")
 
 ;; bug: ccrypt prompt for encryption key does not match password input regexp
-;; crypt prompts to match: "Enter encryption key:" and "Enter encryption key: (repeat)"
-(setq comint-password-prompt-regexp (concat comint-password-prompt-regexp "\\|^Enter encryption key:.*\\s *\\'"))
+;; crypt prompts to match: "Enter encryption key:", "Enter encryption key: (repeat)", and "Enter decryption key:"
+(setq comint-password-prompt-regexp (concat comint-password-prompt-regexp "\\|^Enter \\(en\\|de\\)cryption key:.*\\s *\\'"))
 
 (defun save-buffers-kill-terminal--advice--ask-yes-or-no (original-function &rest args)
   (if (yes-or-no-p "Is life too much? ") (apply original-function args) (message "Keep up the good fight!")))
