--- a/emacs.org
+++ b/emacs.org
@@ -527,6 +527,11 @@ fix for cursor color in clients falling back to the default theme [[http:emacs.s
 (defun transparency-alpha-increase () (interactive) (jw--set-transparency-alpha (1+ (jw--get-transparency-alpha))))
 (defun transparency-alpha-decrease () (interactive) (jw--set-transparency-alpha (1- (jw--get-transparency-alpha))))
 
+(defun font-size-transparency-alpha-normal ()
+  (interactive)
+  (font-size-normal)
+  (transparency-alpha-normal))
+
 (defun kill-ring-cleanup-last-kill (&optional in-major-mode)
   "Cleans whitespace and reindents the text in the head of the kill ring as if in the major mode."
   (interactive)
@@ -925,6 +930,7 @@ argument makes the windows rotate backwards."
 (define-key ctl-x-4-map (kbd "2") 'toggle-window-split)
 (define-key ctl-x-4-map (kbd "3") 'toggle-window-split)
 (define-key ctl-x-4-map (kbd "1") 'rotate-windows)
+(define-key ctl-x-4-map (kbd "R") 'font-size-transparency-alpha-normal)
 
 (define-key ctl-x-4-map (kbd "<up>") 'font-size-increase)
 (define-key ctl-x-4-map (kbd "<down>") 'font-size-decrease)
@@ -1690,7 +1696,7 @@ load the =private= directory and the =private.org= file if they exist
 #+BEGIN_SRC emacs-lisp
 (yas-reload-all)
 (scratch-buffer)
-(transparency-alpha-normal)
+(font-size-transparency-alpha-normal)
 (cd (getenv "HOME"))
 (toggle-frame-maximized)
 (mode-line-off)
